<resources>
    <string name="app_name">Photo Affirmations</string>
    <string name="add_affirmation">Tap to add affirmation</string>
    <string name="add_image">Add image of you embodying this characteristic...</string>
    <string name="swipe_navigation">swipe to navigate</string>
    <string name="add_affirmations">Add Affirmations</string>
    <string name="edit_affirmations">Edit Affirmations</string>
    <string name="view_affirmations">View Affirmations</string>
    <string name="demo">Demo</string>
    <string name="affirmation_image">Affirmation Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editButton">Edit</string>
    <string name="changePositionButton">Change Position</string>
    <string name="deleteButton">Delete</string>
    <string name="demo1">Welcome to Photo Affirmations! Photo Affirmations is an application where you can write your own affirmations with photos that embody your affirmation.</string>
    <string name="demo2">Home screen buttons: \n\n - To add affirmations, hit \"Add Affirmations\" \n - To view affirmations hit \"View Affirmations\" \n - To edit affirmations, hit \"Edit Affirmations\"</string>
    <string name="demo3">Continue to swipe through this Demo to see a few examples of affirmations, or select the back button at the top to return to the home page and begin using this app.</string>
    <string name="demo4">I am a happy person. I try my best to look at things in a positive way.</string>
    <string name="demo5">I am determined. I will be able to accomplish my goals.</string>
    <string name="demo6">I am funny, easygoing and lighthearted.</string>
    <string name="app_title">Photo Affirmations</string>
    <string name="privacyPolicy">Privacy Policy</string>
</resources>
